reworked and finalized 'README.md'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.tex
@@ -7361,8 +7361,8 @@ Iris-versicolor       0.90      1.00      0.95         9
 \subsection{English summary}\label{english-summary}}
 
 In November 2022, the \textbf{Artificial Intelligence Conference} will
-be hosted by the German Social Accident Insurance (DGUV) in Dresden. The
-present tutorial is to be presented to interested ML novices in the
+be hosted by the German Social Accident Insurance (DGUV) in Dresden.
+This tutorial is to be presented to interested ML novices in the
 technical occupational safety and health of the social accident
 insurance institutions as part of a separate \textbf{Getting Started
 Workshop}.
@@ -7651,7 +7651,7 @@ für seine Geduld mit Papa. Er hätte sicherlich das ein oder andere Mal
 lieber ``Die Sendung mit der Maus'' statt seltsamer Grafiken mit mir auf
 dem Rechner angeschaut.
 
-Dresden, 18.10.2022
+Dresden, 25.10.2022
 
 
     % Add a bibliography block to the postdoc
