reworked structure and content of presentation slides

--- a/Presentation_slides_de.ipynb
+++ b/Presentation_slides_de.ipynb
@@ -9,12 +9,12 @@
     }
    },
    "source": [
-    "# Eine systematische Einführung in Machine Learning (ML)"
+    "# Eine systematische Einführung in das Maschinelle Lernen (ML)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "5024c493-b592-4ba0-9816-16eea9d61ba5",
    "metadata": {
     "slideshow": {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e1c53799",
    "metadata": {
     "slideshow": {
@@ -44,17 +44,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {
       "image/png": {
-       "width": 800
+       "width": 1200
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename = \"./images/Cover_image.png\", width = 800)"
+    "Image(filename = \"./images/Cover_image.png\", width = 1200)"
    ]
   },
   {
@@ -124,9 +124,9 @@
     }
    },
    "source": [
-    "### STEP 0: Select hardware and software suitable for ML\n",
+    "## STEP 0: Select hardware and software suitable for ML\n",
     "\n",
-    "**Ziel:** Anleitungen für die Auswahl von ***Hardware*** und ***Software***, die für maschinelles Lernen geeignet sind"
+    "**Ziel:** Hinweise für die Auswahl von ***Hardware*** und ***Software***, die für maschinelles Lernen geeignet sind"
    ]
   },
   {
@@ -138,9 +138,14 @@
     }
    },
    "source": [
-    "- Hinweise bzgl. **Community Support**\n",
-    "    - ohne Unterstützung einer aktiven Community ist man bei Fragen oder Problemen (fast) auf sich allein gestellt\n",
-    "    - Empfehlung: Entscheiden Sie sich für die (technisch, preislich, etc.) **zweitbeste Alternative**, aber dafür mit einer großen **Community**!"
+    "### Auf **Community Support** achten\n",
+    "\n",
+    "- neben rein technischen oder finanziellen Merkmalen sollte auch auf eine breite **Unterstützung durch eine gut vernetzte Community** geachtet werden:\n",
+    "    - ausgewogener Anteil aus **Herstellern** von Hardwarekomponenten,\n",
+    "    - **Softwareentwickler** idealerweise aus dem **Open-Source-**Ökosystem und\n",
+    "    - eine aktive **Nutzer-Community**\n",
+    "- ohne Unterstützung einer aktiven Community ist man bei Fragen oder Problemen (fast) auf sich allein gestellt\n",
+    "- Empfehlung: Entscheiden Sie sich für die (technisch, preislich, etc.) **zweitbeste Alternative**, aber dafür mit einer großen **Community**!"
    ]
   },
   {
@@ -152,9 +157,12 @@
     }
    },
    "source": [
-    "- bei Auswahl geeigneter **Hardware** Unterscheidung in\n",
-    "    - **Trainingssystem**\n",
-    "    - **Applikationssystem**"
+    "### Auswahl geeigneter **Hardware**\n",
+    "\n",
+    "Unterscheidung in:\n",
+    "\n",
+    "- **Trainingssystem**\n",
+    "- **Applikationssystem**"
    ]
   },
   {
@@ -166,16 +174,17 @@
     }
    },
    "source": [
-    "- Auswahl geeigneter **Software**\n",
-    "    - Programmiersprachen  \n",
-    "    => Erkenntnis: Es gibt **keine beste Programmiersprache für maschinelles Lernen**, jede ist dort gut, wo sie am besten passt.\n",
+    "### Auswahl geeigneter **Software** (1)\n",
+    "\n",
+    "- Programmiersprachen  \n",
+    "&rarr; Erkenntnis: Es gibt **keine beste Programmiersprache für maschinelles Lernen**, jede ist dort gut, wo sie am besten passt.\n",
     "\n",
     "Folgendes **Trenddiagramm** zeigt die **Beliebtheit von Programmiersprachen** für ML (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=python%2Cr%2Coctave%2Cjava%2Cc%2B%2B), Lizenz: CC BY-SA 4.0):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "424acc41",
    "metadata": {
     "slideshow": {
@@ -190,7 +199,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {
       "image/png": {
        "width": 1000
@@ -212,18 +221,19 @@
     }
    },
    "source": [
-    "- Auswahl geeigneter **Software**\n",
-    "    - Python-Pakete für:\n",
-    "        - Datenanalyse\n",
-    "        - Datenvisualisierung\n",
-    "        - maschinenelles Lernen\n",
+    "### Auswahl geeigneter **Software** (2)\n",
+    "\n",
+    "- Python-Pakete für:\n",
+    "    - Datenanalyse\n",
+    "    - Datenvisualisierung\n",
+    "    - maschinenelles Lernen\n",
     "\n",
     "Folgendes **Trenddiagramm** zeigt die **Beliebtheit** ausgewählter **Python-Pakete** für **Datenanalyse**, **Datenvisualisierung** und **maschinelles Lernen** (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), Lizenz: CC BY-SA 4.0):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2e7f95cf",
    "metadata": {
     "slideshow": {
@@ -238,17 +248,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {
       "image/png": {
-       "width": 900
+       "width": 1000
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename = \"./images/2022-09-07_StackOverflowTrends_MLPythonPackages_wide.png\", width = 900)"
+    "Image(filename = \"./images/2022-09-07_StackOverflowTrends_MLPythonPackages_wide.png\", width = 1000)"
    ]
   },
   {
@@ -260,15 +270,16 @@
     }
    },
    "source": [
-    "- Auswahl geeigneter **Software**\n",
-    "    - Programmier- und Entwicklungsumgebungen (sog. IDEs)\n",
+    "### Auswahl geeigneter **Software** (3)\n",
+    "\n",
+    "- Programmier- und Entwicklungsumgebungen (sog. IDEs)\n",
     "\n",
     "Folgendes **Trenddiagramm** zeigt die **Beliebtheit** ausgewählter **IDEs** für ML-Programmiersprachen (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), Lizenz: CC BY-SA 4.0):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "f335686d",
    "metadata": {
     "slideshow": {
@@ -283,17 +294,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {
       "image/png": {
-       "width": 900
+       "width": 1000
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename = \"./images/2022-09-07_StackOverflowTrends_IDEs_wide.png\", width = 900)"
+    "Image(filename = \"./images/2022-09-07_StackOverflowTrends_IDEs_wide.png\", width = 1000)"
    ]
   },
   {
@@ -305,10 +316,11 @@
     }
    },
    "source": [
-    "- Auswahl geeigneter **Software**\n",
-    "    - Cloud-hosted IDEs\n",
-    "        - interessant, um Dinge auszuprobieren (ohne eigene Hardware und Software)  \n",
-    "        => **Wichtig:** Datenschutz-Aspekte beachten!\n"
+    "### Auswahl geeigneter **Software** (4)\n",
+    "\n",
+    "- Cloud-hosted IDEs\n",
+    "    - interessant, um Dinge auszuprobieren (ohne eigene Hardware und Software)  \n",
+    "    &rarr; **Wichtig:** Datenschutz-Aspekte beachten!"
    ]
   },
   {
@@ -320,16 +332,17 @@
     }
    },
    "source": [
-    "- Auswahl geeigneter **Software**\n",
-    "    - Betriebsysteme:  \n",
-    "        Virtuelle Maschine <=> separater Laborrechner\n",
+    "### Auswahl geeigneter **Software** (5)\n",
+    "\n",
+    "- Betriebsysteme:  \n",
+    "    Arbeitsplatzrechner &lrarr; virtuelle Maschine &rarr; separater **Laborrechner**!\n",
     "\n",
     "Folgendes **Trenddiagramm** zeigt die **Beliebtheit** Betriebssysteme, die von **Datenanalysten** und **ML-Entwicklern** verwendet werden (Quelle: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), Lizenz: CC BY-SA 4.0):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "2a02dfcf",
    "metadata": {
     "slideshow": {
@@ -344,17 +357,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {
       "image/png": {
-       "width": 900
+       "width": 1000
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename = \"./images/2022-09-07_StackOverflowTrends_OperatingSystems_wide.png\", width = 900)"
+    "Image(filename = \"./images/2022-09-07_StackOverflowTrends_OperatingSystems_wide.png\", width = 1000)"
    ]
   },
   {
@@ -366,12 +379,12 @@
     }
    },
    "source": [
-    "### STEP 1: Acquire the ML dataset"
+    "## STEP 1: Acquire the ML dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "b4464200",
    "metadata": {},
    "outputs": [
@@ -382,17 +395,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {
       "image/png": {
-       "width": 1100
+       "width": 1500
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename = \"./images/Iris_images.png\", width = 1100)"
+    "Image(filename = \"./images/Iris_images.png\", width = 1500)"
    ]
   },
   {
@@ -404,7 +417,7 @@
     }
    },
    "source": [
-    "### STEP 2: Explore the ML dataset"
+    "## STEP 2: Explore the ML dataset"
    ]
   },
   {
@@ -416,7 +429,7 @@
     }
    },
    "source": [
-    "### STEP 3: Choose and create the ML model"
+    "## STEP 3: Choose and create the ML model"
    ]
   },
   {
@@ -428,7 +441,7 @@
     }
    },
    "source": [
-    "### STEP 4: Preprocess the dataset for training"
+    "## STEP 4: Preprocess the dataset for training"
    ]
   },
   {
@@ -440,7 +453,7 @@
     }
    },
    "source": [
-    "### STEP 5: Carry out training, prediction and testing"
+    "## STEP 5: Carry out training, prediction and testing"
    ]
   },
   {
@@ -452,7 +465,7 @@
     }
    },
    "source": [
-    "### STEP 6: Evaluate model's performance"
+    "## STEP 6: Evaluate model's performance"
    ]
   },
   {
@@ -464,7 +477,7 @@
     }
    },
    "source": [
-    "### STEP 7: Vary parameters of the ML model manually"
+    "## STEP 7: Vary parameters of the ML model manually"
    ]
   },
   {
@@ -476,7 +489,7 @@
     }
    },
    "source": [
-    "### STEP 8: Tune the ML model systematically"
+    "## STEP 8: Tune the ML model systematically"
    ]
   },
   {
@@ -509,9 +522,13 @@
     "```\n",
     "\n",
     "Refer to:\n",
+    "\n",
+    "- [RISE: Reveal.js - Jupyter/IPython Slideshow Extension](https://rise.readthedocs.io/en/maint-5.5/index.html)\n",
+    "    - [Installation](https://rise.readthedocs.io/en/maint-5.5/installation.html)\n",
+    "    - [Creating a slideshow](https://rise.readthedocs.io/en/maint-5.5/usage.html#creating-a-slideshow)\n",
+    "    - [reveal: Config Options, Themes, Transitions ...](https://revealjs.com/themes/)\n",
     "- [Presenting Code Using Jupyter Notebook Slides](https://medium.com/@mjspeck/presenting-code-using-jupyter-notebook-slides-a8a3c3b59d67)\n",
-    "- [5 Slides for Tips on Presentation Mode in Jupyter Notebook](https://towardsdatascience.com/5-slides-for-tips-on-presentation-mode-in-jupyter-notebook-f858b15fff4f)\n",
-    "- [RISE: Reveal.js - Jupyter/IPython Slideshow Extension](https://rise.readthedocs.io/en/maint-5.5/index.html)"
+    "- [5 Slides for Tips on Presentation Mode in Jupyter Notebook](https://towardsdatascience.com/5-slides-for-tips-on-presentation-mode-in-jupyter-notebook-f858b15fff4f)"
    ]
   },
   {
@@ -540,7 +557,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
+  },
+  "rise": {
+   "scroll": true,
+   "theme": "beige",
+   "transition": "zoom"
   }
  },
  "nbformat": 4,
